test/sema/positive/bound_checking3.impala
trait U {}
trait T[A : U] {}

impl[C: U] T[C] for int {}
