test/sema/negative/trait_impls4.impala
trait T {}
impl T for i32 {}
impl T for i32 {}
